eclipse-workspace/padmini/AlRayan/Zensar Sandbox Full Components/src/objects/Page_Layout_Map__c.object
<CustomObject>
    <fields>
        <fullName>DynamicPageConfig__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DynamicPageConfig</label>
        <referenceTo>DynamicPageConfig__c</referenceTo>
        <relationshipLabel>Page Layout Maps</relationshipLabel>
        <relationshipName>Page_Layout_Maps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <formula>if(Text( Type__c) = &apos;User&apos;, if(isBlank(ProductEventDirector__c), 15 ,10 ), 

if(Text(Type__c) = &apos;Profile&apos;, if(isBlank(ProductEventDirector__c), 25 ,20 ), 

IF( and(isBlank(Record_Type__c),isBlank(ProductEventDirector__c)) , 40 , if(isBlank(ProductEventDirector__c), 35 ,30 )) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProductEventDirector__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProductEventDirector</label>
        <referenceTo>ProductEventDirector__c</referenceTo>
        <relationshipLabel>Page Layout Maps</relationshipLabel>
        <relationshipName>Page_Layout_Maps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Profile_Name__c</fullName>
        <label>Profile Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <label>Record Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SObject__c</fullName>
        <label>SObject</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Profile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RecordType</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Use_Standard_Layout__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Standard Layout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Page_Layout_Maps</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Page Layout Map</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>DynamicPageConfig__c</columns>
        <columns>ProductEventDirector__c</columns>
        <columns>Profile_Name__c</columns>
        <columns>Record_Type__c</columns>
        <columns>Type__c</columns>
        <columns>Use_Standard_Layout__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Defaults</fullName>
        <columns>NAME</columns>
        <columns>Record_Type__c</columns>
        <columns>DynamicPageConfig__c</columns>
        <columns>Type__c</columns>
        <columns>Use_Standard_Layout__c</columns>
        <columns>User__c</columns>
        <columns>Profile_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Global</value>
        </filters>
        <label>Defaults</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>Map-{0000}</displayFormat>
        <label>Page Layout Map Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Page Layout Maps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Cant_have_record_type_and_director</fullName>
        <active>true</active>
        <errorConditionFormula>if(AND(Not(isBlank(ProductEventDirector__c)),Not(isBlank(Record_Type__c))),true,false )</errorConditionFormula>
        <errorMessage>You can&apos;t select both record type and director</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Profile_Required</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND(Text(Type__c) = &apos;Profile&apos;, isBlank(Profile_Name__c) ) , true, false)</errorConditionFormula>
        <errorMessage>Profile name required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>User_Required</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND(Text(Type__c) = &apos;User&apos;, isBlank(User__c) ) , true, false)</errorConditionFormula>
        <errorMessage>User required</errorMessage>
    </validationRules>
</CustomObject>